ArgoCD/Platform/dev/argocd-platform-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: EXTERNAL_IP
    networking.gke.io/v1beta1.FrontendConfig: "frontendconfig-argocd-server"
    ingress.gcp.kubernetes.io/pre-shared-cert: "SELF_SIGNED_CERTIFICATE"
  labels:
    env: dev
    platform: platform
    region: asia-northeast3
    service: argocd    
  name: elb-mkt-dev-platform-argocd
  namespace: argocd-system
spec:
  rules:
  - host: DNS_HOST
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: "/"
        #pathType: ImplementationSpecific
        pathType: Prefix
